@@ -233,7 +233,7 @@ spec = Gem::Specification.new do |s|
     on top of either MySQL, PostgreSQL, or SQLite with eRuby-based templates.
   EOF
 
-  s.add_dependency('rake', '>= 0.4.11')
+  s.add_dependency('rake', '>= 0.4.14')
   s.add_dependency('activerecord', '>= 1.3.0')
   s.add_dependency('actionpack', '>= 1.1.0')
   s.add_dependency('actionmailer', '>= 0.5.0')
